--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,16 +9,12 @@
             namespace = '/test';
             var socket = io.connect('http://' + document.domain + ':' + location.port + namespace);
 
-            socket.on('connect', function() {
-                socket.emit('my event', {data: 'I\'m connected!'});
-            });
-
-            socket.on('my response', function(msg) {
-                $('#log').append('<br>' + $('<div/>').text('Received #' + msg.count + ': ' + msg.data).html());
+            socket.on('counter', function(msg) {
+                $('#log').append('<br>' + $('<div/>').text('counter ' + msg.count).html());
             });
 
             $('form#emit').submit(function(event) {
-                socket.emit('my event', {data: $('#emit_data').val()});
+                socket.emit('echo', {data: $('#emit_data').val()});
                 return false;
             });
         });
